--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "eslint-config-next": "13.4.5",
     "framer-motion": "^11.3.24",
     "jquery": "^3.7.1",
-    "next": "13.4.5",
-    "react": "18.2.0",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.30.2",
